# us-elections-estimator

./: README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/processed/: engagement_tracking.csv  key_states_tracking.csv  official_results.csv  official_results_grouped.csv  time_series_tracking.csv  tracked_data_processed.csv
notebooks/: Zero-shot-Learning-and-Distil-BERT-finetuning.ipynb
streamlit_app/: app.py
us_elections_estimator/: data_processing.py  data_processing_utils.py
