[tool.poetry]
name = "us-elections-estimator"
version = "0.1.0"
description = ""
authors = ["Diego León <diego.leon07@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.35.0"
plotly = "^5.22.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
